@@ -20,3 +20,7 @@ Changes
 
 Fixes
 =====
+
+- Improved the behaviour in case the cluster drops below the number of minimum
+  nodes. The root REST endpoint will no longer timeout and ``sys.checks`` can
+  still be queried, similar to how ``sys.nodes`` can still be queried.
